--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,6 +1,8 @@
 .home-product-card {
     cursor: pointer;
     border: 1px solid #aeaeae60;
+    margin-top: 2rem;
+
 
     img {
         width: 270px;
