--- a/src/scssPages/productDetails.scss
+++ b/src/scssPages/productDetails.scss
@@ -26,6 +26,7 @@
         padding-bottom: 2rem;
         width: 62%;
         margin-bottom: 5rem;
+        margin-top: 100px;
 
         .container-left {
             display: flex;
