--- a/src/scssPages/productDetails.scss
+++ b/src/scssPages/productDetails.scss
@@ -153,6 +153,7 @@
                     margin-left: 1.5rem;
                     background-color: hsl(351, 95%, 59%);
                     color: #fff;
+                    text-decoration: none;
 
                     &:hover {
                         background-color: hsl(351, 95%, 69%);
